--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
         <div class="nav-right">
 
             <ul class="list">
-                <li class="list-items item-active">Home</li>
-                <li class="list-items">Services</li>
-                <li class="list-items">Pricing</li>
-                <li class="list-items">Testimonials</li>
-                <li class="list-items">Blog</li>
+                <a href="#"><li class="list-items item-active">Home</li></a>
+                <a href="#"><li class="list-items">Services</li></a>
+                <a href="#"><li class="list-items">Pricing</li></a>
+                <a href="#"><li class="list-items">Testimonials</li></a>
+                <a href="#"><li class="list-items">Blog</li></a>
             </ul>
             <button class="btn">FREE TRIAL</button>
         </div>
     </nav>
+
+    <!-- hero -->
     <div class="hero">
         <div class="hero-left">
-            <h1 class="hero-heading">Codext one of<br>the best system<br>in SAAS</h1>
+            <h1 class="hero-heading">Codext one of the best system in<br>SAAS</h1>
             <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo mollitia<br>architecto minima quasi! Iusto sit saepe magnam odit quae, eveniet<br>ex a amet dignissimos sed.</p>
         </div>
         <div class="hero-right">
